Fix vertical alignment on author photo (#888)
* Reformat CSS with prettier

* Fix vertical alignment on author photo

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,7 +13,6 @@ blockquote {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 1.5rem;
 }
 
 .navigation-avatar {
